# GSTTS-ComfyUI

./: README.md  __init__.py  ft_node.py  pyproject.toml  requirements.txt  tts_node.py
GPT_SoVITS/: s1_train.py  s2_train.py
GPT_SoVITS/prepare_datasets/: 1-get-text.py  2-get-hubert-wav32k.py  3-get-semantic.py
GPT_SoVITS/text/: __init__.py  chinese2.py
tools/: my_utils.py
web/js/: previewSRT.js  uploadSRT.js
workflows/: gsv_finetune_workflow.json  gsv_tts_workflow.json
