[project]
name = "gstts-comfyui"
description = "a comfyui custom node for [a/GPT-SoVITS](https://github.com/RVC-Boss/GPT-SoVITS)"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["matplotlib", "pandas", "scipy", "tensorboard", "librosa", "numba==0.56.4", "pytorch-lightning", "ffmpeg-python", "onnxruntime; sys_platform == 'darwin'", "# onnxruntime-gpu; sys_platform != 'darwin'", "tqdm", "funasr", "cn2an", "pypinyin", "pyopenjtalk", "g2p_en", "modelscope", "sentencepiece", "transformers", "chardet", "PyYAML", "psutil", "jieba_fast", "jieba", "LangSegment>=0.2.0", "Faster_Whisper", "wordsegment", "rotary_embedding_torch", "pyjyutping", "g2pk2", "ko_pron", "opencc; sys_platform != 'linux'", "opencc==1.1.1; sys_platform == 'linux'", "python_mecab_ko; sys_platform != 'win32'"]

[project.urls]
Repository = "https://github.com/AIFSH/GSTTS-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "GSTTS-ComfyUI"
Icon = ""
